bus service phase init
